# Crypto-Price-Tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celery_app.py  docker-compose.yml  dockerignore.txt  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_uuid_extension.py  002_create_prices_table.py  003_add_b_tree_index_to_the_ticker.py
app/di/: prices_container.py
app/infrastraction/integrations/: deribit.py
app/infrastraction/repositories/: price_repository.py
app/infrastructure/integrations/: deribit.py
app/infrastructure/repositories/: price_repository.py
app/infrastructure/uow/: prices_unit_of_work.py
app/models/: price.py
app/services/: fetch_prices_service.py  price_service.py
entrypoints/: entrypoint.sh  entrypoint_celery.sh  entrypoint_celery_beat.sh
exceptions/: custom_exceptions.py  exception_handlers.py
helpers/: client_redis.py  db_config.py
settings/: __init__.py  app.py  base.py  celery.py  db.py  deribit.py  redis.py
tasks/: fetch_prices.py
tests/: test_prices.py
web/: create_app.py  routes.py
web/api/admin/: schemas.py  views.py
web/api/prices/: schemas.py  views.py
