[tool.poetry]
name = "crypto-price-tracker"
version = "0.1.0"
description = ""
authors = ["Maria <maria@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = ">=0.115.12,<0.116.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.40,<3.0.0" }
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.15.2,<2.0.0"
pydantic = ">=2.11.3,<3.0.0"
uvicorn = ">=0.34.2,<0.35.0"
environs = "^14.1.1"
click = "^8.2.0"
redis = "^6.1.0"
aiohttp = "^3.13.3"
celery = "^5.6.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pylint = "^3.3.6"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
from_first = false
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_any_explicit = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
strict_optional = true
strict_equality = true
allow_any_explicit = true
warn_no_return = true
disable_error_code = [
    "valid-type",
    "misc",
]
